--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Blank Theme
-GitHub Theme URI: 
+Theme Name: eKapitula Theme
+GitHub Theme URI: https://github.com/QubaPra/eKapitulaTheme
 Theme URI:  https://krowodrza.zhr.pl/
-Author:      Jakub Prażuch
+Author:      Quba Prażuch
 Author URI:  https://krowodrza.zhr.pl/
-Description: Minimalny motyw bez styli
+Description: Motyw z plikami html stron dla krowodrza.zhr.pl
 Version:     1.1
 License:     GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: blank-theme
+Text Domain: ekapitula-theme
 */
